# triggerlang

./: Cargo.toml  Makefile  README.md  example.tl
src/: grammar.pest  lib.rs  main.rs
tests/: tests.rs
